# kinetic-forge-studio

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  helix_calc.py  kinetic-sculpture.code-workspace  tmp_module_payload.json  tmp_vlad_summary.py
alpha-pulse/backend/: pyproject.toml
alpha-pulse/backend/app/: main.py
alpha-pulse/backend/app/db/: database.py  (+1 more)
alpha-pulse/backend/tests/: test_bulk_ingest.py  test_claude_client.py  test_db_models.py  test_manual_trade.py  test_orchestrator.py  test_routes_dashboard.py  test_routes_ingest.py  test_routes_rules.py  test_runner_extended.py  test_search_agent.py  test_seed.py  test_signal_drift.py  test_signal_earnings_nlp.py  test_signal_employee.py  test_signal_hurst.py  test_signal_insider.py  test_signal_kelly.py  test_signal_lifecycle.py  test_signal_momentum.py  test_signal_quality.py  test_signal_readability.py  test_signal_regime.py  test_signal_runner.py  test_signal_value.py  test_validate_ticker.py
kinetic-forge-studio/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
kinetic-forge-studio/backend/: kfs_manifest_parser.py  kfs_manifest_types.py  kfs_mcp_server.py  pyproject.toml
kinetic-forge-studio/docs/: SCHEMA.md  api_reference.md  kfs_manifest_spec.md  manifest_spec.md
kinetic-forge-studio/examples/: complex_motion.kfs.yaml  sculpture_v1.kfs.yaml  simple_sculpture.kfs.yaml  tool_integration_guide.md
kinetic-forge-studio/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
kinetic-forge-studio/kfs_cli/: cli.py  main.py
kinetic-forge-studio/kfs_core/: __init__.py  constants.py  exceptions.py  io.py  manifest_models.py  manifest_parser.py  models.py  schema_generator.py
kinetic-forge-studio/tests/: test_asset_resolver.py  test_cli.py  test_cli_bake.py  test_cli_generate.py  test_cli_validate.py  test_docs_examples.py  test_documentation.py  test_errors.py  test_io.py  test_kfs_core_setup.py  test_kfs_manifest_cli.py  test_kfs_manifest_models.py  test_kfs_manifest_parser.py  test_kfs_manifest_yaml_loader.py  test_manifest_models.py  test_manifest_parser.py  test_manifest_validator.py  test_models.py  test_parser.py  test_schema.py  test_schema_generator.py
(+1202 files in other folders)
