[project]
name = "alpha-pulse"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.19,<1",
    "anthropic>=0.40,<1",
    "httpx>=0.26,<1",
    "apscheduler>=3.10,<4",
    "click>=8.1,<9",
    "python-multipart>=0.0.6,<1",
    "yfinance>=0.2,<2",
    "pandas>=2.1,<3",
    "numpy>=1.24,<3",
    "beautifulsoup4>=4.12,<5",
    "sec-edgar-downloader>=5.0,<6",
    "edgartools>=2.0,<4",
    "textstat>=0.7,<1",
    "pysentiment2>=0.1,<1",
    "transformers>=4.36,<5",
    "torch>=2.1,<3",
    "groq>=0.4,<1",
    "google-generativeai>=0.3,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9", "pytest-asyncio>=0.23,<1", "httpx>=0.26,<1"]

[project.scripts]
ap = "cli:cli"

[tool.setuptools.packages.find]
include = ["app*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
