[project]
name = "kinetic-forge-studio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aiosqlite>=0.19",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.26"]
cad = ["cadquery>=2.4", "trimesh>=4.0", "Pillow>=10.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
